
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2003 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Removed "USE_" prefixes of configuration #defines.

ngIRCd 0.7.6 (2003-12-05)

  - Fixed abort() ("server crash") when INVITE'ing users to nonexistent
    channels. Bug found by <hiddenx@wp.pl>.
  - Extended version numbering of CVS versions (added date).
  - Enhanced/fixed doc/Protocol.txt;

ngIRCd 0.7.5 (2003-11-07)

  - Fixed ban behavior: users which are banned from a channel can't no
    longer send PRIVMSG's to this channel (fixes Bug #47).
  - Fixed and enhanced the "penalty handling" of the server: commands that
    require more resources block the client for a short time.
  - Changed the internal time resolution to one second.
  - New configuration variable "MaxConnectionsIP" to limit the number of
    simultaneous connections from a single IP that the server will accept.
    This configuration options lowers the risk of denial of service attacks
    (DoS), the default is 5 connections per client IP.
  - Fixed build problems under Mac OS X 10.3.
  - Use "-pipe" when compiling with gcc, speeds things up a little :-)
  - Added new configuration variable "Listen" to bind all listening
    sockets of the server to a single IP address.
  - Suppress misleading error message of diff during make run.
  - Enhanced test-suite and made it work on GNU/Hurd.
  - Fixed minor typo in debug output :-)

ngIRCd 0.7.1 (2003-07-18)

  - Included files to build Debian packages (located in "debian/").
  - Updated config.guess and config.sub to newer upstream versions.
  - NJOIN propagates user channel modes correctly again ... Upsa.
  - Made Makefile more compatible with "make -j<n>".
  - Added support for GNU/Hurd.