@@ -8,7 +8,7 @@
 # (at your option) any later version.
 # Please read the file COPYING, README and AUTHORS for more information.
 #
-# $Id: configure.in,v 1.97 2003/12/26 15:55:07 alex Exp $
+# $Id: configure.in,v 1.98 2003/12/27 13:01:12 alex Exp $
 #
 
 # -- Initialisierung --
@@ -31,6 +31,7 @@ AH_TEMPLATE([ZLIB], [Define if zlib compression should be enabled])
 AH_TEMPLATE([TCPWRAP], [Define if TCP wrappers should be used])
 AH_TEMPLATE([IRCPLUS], [Define if IRC+ protocol should be used])
 AH_TEMPLATE([RENDEZVOUS], [Define if Rendezvous support should be included])
+AH_TEMPLATE([IDENTAUTH], [Define if the server should do IDENT requests])
 
 AH_TEMPLATE([TARGET_OS], [Target operating system name])
 AH_TEMPLATE([TARGET_VENDOR], [Target system vendor])
@@ -223,6 +224,22 @@ if test "$x_rendezvous_on" = "yes"; then
 	AC_CHECK_HEADERS(DNSServiceDiscovery/DNSServiceDiscovery.h mach/port.h)
 fi
 
+x_identauth_on=no
+AC_ARG_WITH(ident,
+	[  --with-ident            enable "IDENT" ("AUTH") protocol support],
+	[	if test "$withval" = "yes"; then
+			AC_CHECK_LIB(ident, ident_id)
+			AC_CHECK_FUNCS(ident_id, x_identauth_on=yes,
+				AC_MSG_ERROR([Can't enable IDENT support!])
+			)
+		fi
+	]
+)
+if test "$x_identauth_on" = "yes"; then
+	AC_DEFINE(IDENTAUTH, 1)
+	AC_CHECK_HEADERS(ident.h)
+fi
+
 x_ircplus_on=yes
 AC_ARG_ENABLE(ircplus,
 	[  --disable-ircplus       disable IRC+ protocol],
@@ -384,6 +401,12 @@ echo $ECHO_N "      IRC+ protocol: $ECHO_C"
 test "$x_ircplus_on" = "yes" \
 	&& echo "yes" \
 	|| echo "no"
-echo
+
+echo $ECHO_N "      IDENT support: $ECHO_C"
+test "$x_identauth_on" = "yes" \
+	&& echo $ECHO_N "yes $ECHO_C" \
+	|| echo $ECHO_N "no  $ECHO_C"
+
+echo; echo
 
 # -eof-
