@@ -1,6 +1,6 @@
 /*
  * ngIRCd -- The Next Generation IRC Daemon
- * Copyright (c)2001,2002 by Alexander Barton (alex@barton.de)
+ * Copyright (c)2001-2003 by Alexander Barton (alex@barton.de)
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -8,7 +8,7 @@
  * (at your option) any later version.
  * Please read the file COPYING, README and AUTHORS for more information.
  *
- * $Id: resolve.h,v 1.5 2003/04/21 10:53:10 alex Exp $
+ * $Id: resolve.h,v 1.6 2003/12/27 13:01:12 alex Exp $
  *
  * Asynchronous resolver (header)
  */
@@ -37,7 +37,12 @@ GLOBAL fd_set Resolver_FDs;
 
 GLOBAL VOID Resolve_Init PARAMS(( VOID ));
 
+#ifdef IDENTAUTH
+GLOBAL RES_STAT *Resolve_Addr PARAMS(( struct sockaddr_in *Addr, int Sock ));
+#else
 GLOBAL RES_STAT *Resolve_Addr PARAMS(( struct sockaddr_in *Addr ));
+#endif
+
 GLOBAL RES_STAT *Resolve_Name PARAMS(( CHAR *Host ));
 
 
