@@ -12,6 +12,9 @@
 
 ngIRCd CVSHEAD
 
+  - Added optional support for "IDENT" lookups on incoming connections. You
+    have to enable this function with the ./configure switch "--with-ident".
+    The default is not to do IDENT lookups.
   - Removed "USE_" prefixes of configuration #defines.
 
 ngIRCd 0.7.6 (2003-12-05)
@@ -488,4 +491,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.219 2003/12/26 15:55:07 alex Exp $
+$Id: ChangeLog,v 1.220 2003/12/27 13:01:12 alex Exp $
